# image-workflows

./: README.md  pyproject.toml
configuration/SOD1/: SOD1.yml
configuration/analysis/: BBBC001.yml  BBBC039.yml  sample.yml
configuration/segmentation/: BBBC001.yml  sample.yml
configuration/visualization/: BBBC001.yml  BBBC039.yml
cwl_adapters/: ApplyFlatfield.cwl  BasicFlatfieldEstimation.cwl  BbbcDownload.cwl  BbbcDownload1.cwl  FileRenaming.cwl  FtlLabel.cwl  ImageAssembler.cwl  KaggleNucleiSegmentation.cwl  Montage.cwl  NyxusPlugin.cwl  OmeConverter.cwl  PrecomputeSlide.cwl  TabularFeatureConcat.cwl  TabularStatistics.cwl  TabularThresholdingPlugin.cwl  basic-flatfield-estimation.cwl  file-renaming.cwl  image_assembler.cwl  listing_test.cwl  montage.cwl  ome-converter.cwl  precompute_slide.cwl
src/image/workflows/: __init__.py  __main__.py  bbbc.wic  bbbcDownload.py  cwl_analysis.py  cwl_nuclear_segmentation.py  cwl_nuclear_segmentation.wic  cwl_nuclear_segmentation_SOD1.wic  cwl_visualization.py  cwl_visualization.wic  cwl_visualization_SOD1.wic  utils.py
src/polus/image/workflows/: __main__.py  utils.py
workflows/: cwl_analysis.py  cwl_nuclear_segmentation.py
